fixed spacing for quotes and added mailto anchor for emial address in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@
 } 
 
 .media {
-    padding: 20px;
+    padding: 60px;
 }
 /* ------------------------------------------------Quotes */
 
